# hk1d_ros2-1

./: .gitignore  hk1d_ros2.repos
hk1d_bringup_master_follower/config/: hk1d.config.xacro  hk1d_controllers.yaml
hk1d_bringup_master_follower/ros2_control/: hk1d.r2c_hardware.xacro
hk1d_description/config/: hk1d.config.xacro
hk1d_description/ros2_control/: hk1d.r2c_hardware.xacro  hk1d_macro_import_ec_modules.r2c_hardware.xacro
hk1d_interfaces/: CMakeLists.txt  package.xml
hk1d_interfaces/msg/: Diagnostics.msg
identification/: Readme.md
identification/hk1d_identification_interfaces/: CMakeLists.txt  package.xml
identification/hk1d_identification_interfaces/msg/: Hk1dIdentification.msg
identification/hk1d_identification_notebooks/: CMakeLists.txt  dataset.mat  package.xml  red_robot_compensation_with_noise.mat  rosbags_to_mat.ipynb
identification/hk1d_identification_notebooks/_commons/: bag_utils.py  plot_utils.py  plt_utils_noLatex.py
identification/id_controller_closed_loop/: CMakeLists.txt  controller_plugin.xml  package.xml
identification/id_controller_closed_loop/include/identification_controller_cl/: identification_controller_cl.hpp  visibility_control.h
identification/id_controller_closed_loop/src/: identification_controller_cl.cpp
identification/identification_bringup/: CMakeLists.txt  package.xml
identification/identification_bringup/config/: hk1d.config.xacro  hk1d_ident.config.xacro  hk1d_ident_controllers.yaml  identification_plotJuggler.xml  maxon_epos3_config.yaml
identification/identification_bringup/launch/: hk1d_ident.launch.py
identification/identification_controller/: CMakeLists.txt  controller_plugin.xml  package.xml
identification/identification_controller/include/identification_controller/: identification_controller.hpp  visibility_control.h
identification/identification_controller/src/: identification_controller.cpp
identification/identification_node/: package.xml  setup.cfg  setup.py
identification/identification_node/identification_node/: identification_node.py  ref_pos_publisher.py
stamped_array_msgs/: CMakeLists.txt  package.xml
stamped_array_msgs/msg/: StampedArray.msg
