<?xml version="1.0"?>
<package format="3">
  <name>identification_controller_cl</name>
  <version>0.0.1</version>
  <description>identification controller.</description>
  <maintainer email="alyousef@unistra.fr">Fadi Al-Masalamh</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>trajectory_msgs</depend>

  <build_depend>pluginlib</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
