<?xml version="1.0"?>
<package format="3">
  <name>identification_controller</name>
  <version>0.0.1</version>
  <description>identification controller. Takes list of points in the yaml as input (tq) </description>
  <maintainer email="m.bednarczyk@unistra.fr">m.bednarczyk</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <depend>trajectory_msgs</depend>
  
  <!-- custom msgs -->
  <exec_depend>stamped_array_msgs</exec_depend>
  <exec_depend>hk1d_interfaces</exec_depend>

  <build_depend>pluginlib</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
